--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.budgettrackerpoe">
 
     <application
         android:allowBackup="true"
@@ -12,15 +13,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BudgetTrackerPOE"
         tools:targetApi="31">
+
+        <!-- Main launcher activity (Login) -->
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Dashboard screen -->
+        <activity android:name=".DashboardActivity" />
+
+        <!-- Additional screens for navigation -->
+        <activity android:name=".AddExpenseActivity" />
+        <activity android:name=".CategoryActivity" />
+        <activity android:name=".ExpenseHistoryActivity" />
+        <activity android:name=".ReportsActivity" />
     </application>
 
 </manifest>
