--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.BudgetTrackerPOE"
         tools:targetApi="31">
 
-        <!-- Main launcher activity (Login) -->
+        <!-- Login -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -24,16 +24,14 @@
             </intent-filter>
         </activity>
 
-        <!-- Dashboard screen -->
+        <!-- Screens -->
         <activity android:name=".DashboardActivity" />
-
-        <!-- Additional screens for navigation -->
         <activity android:name=".AddExpense" />
         <activity android:name=".CategoryActivity" />
         <activity android:name=".ExpenseHistoryActivity" />
         <activity android:name=".ReportsActivity" />
 
-        <!-- FileProvider declaration -->
+        <!-- FileProvider -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -51,7 +49,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <!-- Optional feature: Camera -->
+    <!-- Camera -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
 </manifest>
